Related: tdf#156351 sw floattable: fix missing top border in follow table

The problem was that in case a table has a table border but no cell
border, then the follow table was missing a top border in case the
follow table had multiple rows.

This was already working for single-row follow tables since commit
a4da71fb824f2d4ecc7c01f4deb2865ba52f5f4c (INTEGRATION: CWS fmebugs04
(1.115.46); FILE MERGED 2008/05/13 13:56:19 fme 1.115.46.2: #i9860# Top
border for tables - correction 2008/05/13 13:49:23 fme 1.115.46.1:
i#9860 Top border for tables, 2008-06-06).

Fix the problem by checking for the case when the first row in a follow
table has no own bottom border and then take that bottom border from the
last row instead, if that has a bottom border.

The reported case around the missing bottom border in the master table
still needs work.

(cherry picked from commit 53798fef2cc0b5b0b9706081a4af5ceca964a41b)

Conflicts:
	sw/CppunitTest_sw_core_layout.mk
	sw/source/core/layout/paintfrm.cxx

Change-Id: Ib418da99067a42efcf3bd0e2d6a9467797de619a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/155885
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
Tested-by: Caolán McNamara <caolan.mcnamara@collabora.com>
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>